[package]
name = "voting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10.0"
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra", package = "ark-bn254", features = ["r1cs"] }
ark-ed-on-bn254 = { version = "^0.4.0", features = ["r1cs"] }
ark-crypto-primitives = { version = "0.4.0", default-features = true, features = [
    "r1cs",
    "encryption",
    "crh",
    "merkle_tree",
    "commitment",
    "prf",
    "sponge"
] }
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-groth16 = "0.4.0"
ark-poly = "0.4.2"
ark-r1cs-std = "0.4.0"
ark-relations = "0.4.0"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
libc = "0.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
num-bigint = "0.4"

derivative = "2.2.0"
rand = "0.8.5"

tracing = { version = "0.1" }
tracing-subscriber = "0.2.0"
hex = "0.4.3"
sha3 = "0.10.8"
ark-ed-on-bls12-381 = "0.4.0"
lazy_static = "1.5.0"
arkworks-r1cs-gadgets = "1.2.0"
sha2 = "0.10.8"
num-traits = "0.2.19"

[features]
print-trace = ["ark-std/print-trace"]
